--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.1",
     "@vinejs/vine": "^3.0.1",
+    "csv-parse": "^6.1.0",
     "luxon": "^3.6.1",
     "pg": "^8.16.0",
-    "reflect-metadata": "^0.2.2",
-    "xlsx": "^0.18.5"
+    "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
     "boundaries": [
